update: エンドポイントの名前を変更
